hphp/hack/test/typecheck/attributes/entry_point_arity.php.exp
File "entry_point_arity.php", line 7, characters 1-61:
Only one `__EntryPoint` annotation is permitted per file (previous `__EntryPoint` annotation in entry_point_arity.php:3) (Parsing[1002])
File "entry_point_arity.php", line 8, characters 33-34:
`__EntryPoint` functions cannot take arguments. (NastCheck[3085])
