hphp/hack/test/typecheck/attributes/entry_point_arity.php
<?hh

<<__EntryPoint>>
function good(): void {}

// This will fatal when we run.
<<__EntryPoint>>
function bad_required_arg(mixed $_): void {}
